--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
   }
 }
 
-/*  ABOUT */
+/*  HOME */
 .home1{
   display: flex;
   align-items: center;
@@ -73,6 +73,12 @@ body {
 
 .home-img img {
   width: 100%;
+  animation: float 3s ease-in-out infinite;
+}
+@keyframes float{
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(-20px); }
+  100% { transform: translateY(0); }
 }
 
 .btn {
@@ -87,6 +93,53 @@ body {
 }
 
 /* HOME 2 SECTION*/
+.home2{
+padding: 80px;
+text-align: center;
+
+}
+.home2 content{
+    display: flex;
+    min-width: 100px;
+    max-height: 50%; 
+}
+.home2 h1{
+ font-size: xx-large; 
+ margin-bottom: 10px; 
+ color: #7CFC00; 
+ text-transform: uppercase;
+}
+.home2-row{
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.home2 img{
+   max-height: 40%;
+   text-align: left;
+    width:48%;
+    text-align: right;
+    gap: 1em;
+    animation: float 3s ease-in-out infinite;
+}
+@keyframes float{
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(-20px); }
+  100% { transform: translateY(0); }
+}
+.home2-items{
+  flex: 1;
+display: flex;
+flex-direction: column;
+}
+
+.about4-items p{
+width: 100%;
+margin-top: 50px;
+}
+
+
 
 /* RESPONSIVE */
  @media (max-width: 1000px){
@@ -173,7 +226,14 @@ body {
 .about-image img{
   max-width: 100%;
   height: auto;
+  animation: float 3s ease-in-out infinite;
 }
+@keyframes float{
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(-20px); }
+  100% { transform: translateY(0); }
+}
+
 
 /* RESPONSIVE */
  @media (max-width: 768px){
@@ -286,7 +346,14 @@ text-align: center;
     width:48%;
     text-align: left;
     gap: 1em;
+    animation: float 3s ease-in-out infinite;
 }
+@keyframes float{
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(-20px); }
+  100% { transform: translateY(0); }
+}
+
 .about4-items{
   flex: 1;
 display: flex;
